--- a/vignettes/BenHamou03.rmd
+++ b/vignettes/BenHamou03.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Vignette for 'cir' Package"
-subtitle: "Using Up-and-Down data from Benhamou et al. (2004)"
+subtitle: "Using Up-and-Down data from Benhamou et al. (2003)"
 author: "Assaf Oron"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -15,8 +15,8 @@ vignette: >
 # tools::buildVignettes(dir = '.',  tangle=TRUE)
 # dir.create("inst/doc")
 # file.copy(dir("vignettes", full.names=TRUE), "inst/doc", overwrite=TRUE)
-# (from SoF: https://stackoverflow.com/questions/10266963/moving-files-between-folders)
-
+# (from https://community.rstudio.com/t/browsevignettes-mypackage-saying-no-vignettes-found/68656/6 )
+  
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#"
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 ## Background
 
-We demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al.^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou.^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here we re-analyze them again using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package.
+We demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al.^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou.^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here we re-analyze them again using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package. For a general up-to-date overview of up-and-down designs, see Oron et al. 2022.^[Oron AP, Souter MJ, Flournoy N. Understanding Research Methods: Up-and-down Designs for Dose-finding. *Anesthesiology* 2022; 137:137–50. See also the online supplement.] 
 
 The study randomized women in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and test whether they are different. The original study used a "traditional" dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$‘s, and hence the difference in potency, was not significant. To derive inference about this difference, they apparently used the standard errors of the dose averages in a $t$-test like manner.
 
@@ -69,7 +69,11 @@ legend('bottomright',legend=c('Effective','Ineffective'),pch=c(19,1),bty='n')
 plot(bhamou03levo, ylim=doserange, ylab="Concentration (%)", main='Levobupivacaine Arm')
 ```
 
-## ED$_{50}$ Estimates
+The "traditional" estimates in the original articles, just used some type of average of the doses administered (the $y$ values in these plots). This is based on the premise that up-and-down designs concentrate these doses roughly symmetrically around the target percentile.
+
+However, generally these estimates are rather outdated and lack robustness. CIR is recommended as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
+
+## Dose-Response Plain and ED$_{50}$ Estimates
 
 To derive IR and CIR estimates, we take the `DRtrace` trajectory objects and generate `doseResponse` dose-rate-count summaries.
 
@@ -80,7 +84,32 @@ knitr::kable(bhamou03ropiRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 knitr::kable(bhamou03levoRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 ```
 
-From here, ED$_{50}$ estimation is one step away:
+Let us visualize the response frequencies on **the dose-response plain, which is "where CIR estimation action happens."**
+*(and likewise for any regression-based estimation of dose-response data)* 
+
+Just like the plots above, the plots below are "native" CIR methods for `doseResponse` objects.
+
+
+```{r drfig0,fig.width=10,fig.height=5,out.height=400,out.width=800}
+par(mfrow=c(1,2), las=1, mar=c(4,4,4,1)) # image format parameters
+plot(bhamou03ropiRates, xlab="Concentration (%)", 
+ylab="Proportion Effective", main='Ropivacaine Arm', ylim=0:1)
+# Showing the target response rate
+abline( h=0.5, col='purple', lty=2)
+
+plot(bhamou03levoRates, xlab="Concentration (%)", 
+ylab="Proportion Effective", main='Levobupivacaine Arm', ylim=0:1)
+
+abline( h=0.5, col='purple', lty=2)
+```
+
+NOTE: symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
+
+Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response region, so the target seems to lie between concentrations $0.09\%$ and $0.10\%$. 
+
+With Levobupivacaine data (right) the picture is far more murky. Concentrations $0.07\%$ and $0.08\%$ go above $50\%$ response, but  $0.09\%$ and $0.10\%$ go back below that level! As we visualize near the end, CIR helps clear that murky picture via the simplest pooled response-rate averages that makes the overall dose-response curve obey monotonicity.
+
+But before going behind the scenes: from the `doseResponse` object, CIR ED$_{50}$ estimation is only one step away.
 
 ```{r cir}
 ropiTargetCIR=quickInverse(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE)
@@ -89,8 +118,10 @@ levoTargetCIR=quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE)
 levoTargetCIR
 ```
 
+You can also do the estimation single-step from the `x, y` data; the function will create a `doseResponse` object on the fly.
+
 ### Notes
- - The estimate appears under the word `point`: 0.0938% for ropivacaine and 0.0684% for  levobupivacaine.
+ - The estimate appears under the word `point`: `r round(ropiTargetCIR$point, 4)`% for ropivacaine and `r round(levoTargetCIR$point, 4)`% for  levobupivacaine.
  - We specify the target as a fraction, via the `target` argument.
  - Default CIs are 90% rather than 95%, due to the large variabily in these typical small-sample experiments. To change it use the `conf` argument.
  - The `adaptiveShrink` option performs an empirical correction the bias induced by the adaptive design, a bias discovered and described recently by Flournoy and Oron.^[Flournoy N, Oron AP. Bias induced by adaptive dose-finding designs. J Appl Stat. 2020;47(13-15):2431-2442.] It is induced not just by UD designs, but also by model-based designs such as the Continual Reassessment Method. **Because of this bias, we strongly recommend to *not* estimate any target except 0.5 from these data, except for exploratory/illustrative purposes.** The correction serves mostly to provide better CI coverage for the target dose estimate.
@@ -99,16 +130,19 @@ levoTargetCIR
 Let us calculate 83% CIs, to evaluate the evidence for different potencies via the overlapping-intervals method.
 
 ```{r ci83}
-quickInverse(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE, conf=0.83)
-quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, conf=0.83)
+ropi83 = quickInverse(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE, conf=0.83)
+ropi83
+levo83 = quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, conf=0.83)
+levo83
 ```
 
-The lower 83% confidence limit for ropivacaine's ED$_{50}$ is almost touching the upper 83% limit for levobupivacaine, but there’s no overlap. One may conclude that there is moderate evidence for a difference in potency at the $\alpha=0.05$ level.
-Thus, our conclusion is similar to Pace and Stylianou’s reanalysis, but not as strong. Our point estimates are also very similar to theirs, and so is the levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19). This should not be too surprising, because CIR is a direct upgrade of IR which Pace and Stylianou used, whereas Benhamou et al. used dose averaging. 
+Paradoxically, despite using a point-estimation method that is closer to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap,** suggesting no evidence for a difference in potency at the $\alpha=0.05$ level. Conversely, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  
 
-Looking more closely for the source of discrepancy, the difference is not in the ropivacaine estimates (0.092 vs. 0.093, and 0.094, by Benhamou et al., Pace-Stylianou, and us, respectively) - but rather in levobupivacaine (0.077, 0.068, 0.068). Looking even deeper, the relatively high dose-avaeraging estimate for levobupivacaine in the original article is mostly due to the experiment’s meandering (rather than straight) path downward to the region where most of the doses were given. There is reason to suspect that the starting-point effect was not mitigated well enough. The original dose-averaging estimate probably excluded only the first 1-2 doses. If one excludes, say, the first 10 doses, the average gets closer to IR/CIR (0.072), and the difference may become significant. 
+**Where we part ways with Pace and Stylianou - dramatically - are indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work for intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
 
-Speaking of Pace and Stylianou’s point estimates, we can use the same quickInverse() function to reproduce them:
+Looking in more detail at the numbers, the two confidence limits with the biggest difference are the ones where the overlap occurs *(or doesn't occur per Pace and Stylianou)*. Their $83\%$ LCL for Ropivacaine is $0.087\%$ - only 0.6 of a dose interval below their point estimate  - whereas ours is $0.079\%$, nearly 1.5 intervals below our point estimate. Even more dramatic is the difference between Levobupivacaine $83\%$ UCLs: $0.081\%$ (1.3 intervals above point-estimate) vs. $0.109\%$ (a full 4 intervals above that estimate).  
+
+Conceptually, the bootstrap CIs appear unrealistically narrow given the amount of information available - only 39 binary observations spread over several doses. By the way, we can use the same quickInverse() function to reproduce the Pace-Stylianou point estimates (but not the interval estimates since `cir` does not implement the bootstrap approach):
 
 ```{r pacesty}
 quickInverse(bhamou03ropiRates, target=0.5, estfun=oldPAVA, conf=0.83)
@@ -118,10 +152,9 @@ quickInverse(bhamou03levoRates, target=0.5, estfun=oldPAVA, conf=0.83)
 
 Note the argument specifying the `oldPAVA()` estimation function (PAVA is the name of the leading algorithm to produce IR estimates; the package default is `cirPAVA()`, i.e., CIR). 
 
-Our confidence intervals are still different from Pace and Stylianou’s, even when using the same point-estimation method. For intervals they used the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work and the Delta method.^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.
-] Their levobupivacaine 83% CI is slightly wider than ours (0.059-0.081 vs. 0.059-0.080), but their ropivacaine interval is substantially narrower (0.087-0.097 vs. 0.085-0.101). The latter is the more typical difference between the two approaches. In fact, their ropivacaine 83% bootstrap CI is unrealistically narrow given the amount of information in the experiment, taking up only a single dose spacing (0.01). 
+Let us visualize more clearly the argument for wider intervals from this dataset.
 
-## Visualizing on the Dose-Response Plane
+## Visualizing CIR on the Dose-Response Plane
 
 To construct the full estimated $F(x)$ curves from IR and CIR, we call `cir`'s *"long-form"* forward-estimation functions: 
 
@@ -141,36 +174,40 @@ ropiCurveCIR
 
 **Note:** To obtain a quick, "short-form" forward estimate -- the forward analogue of `quickInverse()` used above -- use `quickIsotone()`. You will get an output similar to the `$output` object, together with confidence intervals for each dose. That function's arguments are similar to `quickInverse()`.
 
-We end with the dose-response plots.
+We end with the dose-response plots, placed one top of the other to show overlap.
 
-```{r drfig,fig.width=10,fig.height=5,out.height=400,out.width=800}
-par(mfrow=c(1,2), las=1, mar=c(4,4,4,1)) # image format parameters
+```{r drfig,fig.width=6,fig.height=12,out.height=1000,out.width=500}
+par(mfrow=c(2,1), las=1, mar=c(4,4,4,1)) # image format parameters
 plot(bhamou03ropiRates, xlab="Concentration (%)", 
-ylab="Proportion Effective", main='Ropivacaine Arm')
+  ylab="Proportion Effective", main='Ropivacaine Arm', 
+  ylim=0:1, xlim=c(0.05, 0.12), dosevals = (5:12)/100)
 # Adding IR and CIR lines with the same colors/lines as article’s Fig. 4
 lines(y~x, data=ropiCurveIR$output, lty=2)
 lines(y~x, data=ropiCurveCIR$shrinkage, col='blue',lwd=2)
 # Showing the CIR estimate, and confidence interval as a horizontal line
 points(target~point, data=ropiTargetCIR, col='purple', pch=19, cex=2)
-lines(c(ropiTargetCIR$lower90conf,ropiTargetCIR$upper90conf), rep(0.5,2), col='purple', lwd=2)
+lines(c(ropi83$lower83conf,ropi83$upper83conf), rep(0.5,2), col='purple', lwd=2)
 
 # Adding legend:
-legend('bottomright', legend=c("Observed Proportions",'Isotonic Regression',
-                              'Centered Isotonic Regression','Estimate +/- 90% CI'),
+legend('topleft', legend=c("Observed Proportions",'Isotonic Regression',
+                              'Centered Isotonic Regression','Estimate +/- 83% CI'),
        bty='n',pch=c(4,rep(NA,2),16),col=c('black','black','blue','purple'),lty=c(0,2,1,1))
 
 ### Now, second plot for Levobupivacaine
 plot(bhamou03levoRates, xlab="Concentration (%)", 
-ylab="Proportion Effective", main='Levobupivacaine Arm', ylim=0:1)
+  ylab="Proportion Effective", main='Levobupivacaine Arm', 
+  ylim=0:1, xlim=c(0.05, 0.12), dosevals = (5:12)/100)
+
 lines(y~x, data=levoCurveIR$output, lty=2)
 lines(y~x, data=levoCurveCIR$shrinkage, col='blue',lwd=2)
 points(target~point, data=levoTargetCIR, col='purple', pch=19, cex=2)
-lines(c(levoTargetCIR$lower90conf,levoTargetCIR$upper90conf), rep(0.5,2), col='purple', lwd=2)
+lines(c(levo83$lower83conf,levo83$upper83conf), rep(0.5,2), col='purple', lwd=2)
 ```
 
 ### Notes
 
- - The ‘x’ symbols showing the observed response rates come in varying sizes: the area they occupy is proportional to the number of observations. This is the  `plot.doseResponse` default; to change it use `varsize=FALSE`.
+ - We see how the CIR intervals stretch to cover areas where the dose-response curve is very shallow at values not far from $y=0.5.$ Indeed, our CI method is sensitive to local slope around target, which we believe is the correct approach.
+ - Prior to package version 2.3.0, the slope was 
  - In this demonstration the CIR curves differ from the ordinary IR curves not only in the CIR algorithm that “shrinks” horizontal intervals to single points, but also in the bias correction. In principle this correction is compatible with both methods, but here we applied it only to CIR, because it did not exist at the time of Pace and Stylianou’s article.
 
 
