--- a/vignettes/BenHamou03.rmd
+++ b/vignettes/BenHamou03.rmd
@@ -26,23 +26,23 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-I demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al. (2003)^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou (2007).^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here we re-analyze them again using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package. 
+I demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al. (2003)^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou (2007).^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here I re-analyze the dataset again, using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package. 
 
-Up-and-down data analysis was the original motivation for developing CIR and `cir`; however, the package is compatible with any binary-outcome dose-response dataset. For a general up-to-date overview of up-and-down designs, see Oron et al. 2022.^[Oron AP, Souter MJ, Flournoy N. Understanding Research Methods: Up-and-down Designs for Dose-finding. *Anesthesiology* 2022; 137:137–50. See also the online supplement.] If your interest is mainly in UD data analysis, then I have a dedicated UD package called `upndown` in "advanced Beta" stage (as of Spring 2023). It includes wrappers for simple, single-command plotting and estimation of UD datasets, using `cir` package functions. You can download that package using `remotes::install_github(assaforon/upndown)`.
+Up-and-down data analysis was the original motivation for developing CIR and `cir`. For a general overview of UD designs, see Oron et al. 2022.^[Oron AP, Souter MJ, Flournoy N. Understanding Research Methods: Up-and-down Designs for Dose-finding. *Anesthesiology* 2022; 137:137–50. See also the online supplement.] However, the package is compatible with any binary-outcome data for which a monotone dose-response relationship is expected - regardless of design. The `cir` package includes methods for both **"forward"** estimation, i.e., the expected response rate conditional on dose, and **"inverse"** estimation, a.k.a. dose-finding. Both estimation directions have quick, more user-friendly all-in-one functions, and more detailed in-depth functions.
 
-The vignette below provides a more detailed overview of CIR estimation and preliminary data preparation.
+If your interest is mainly in UD data analysis, then I have a dedicated UD package called `upndown` in *"advanced Beta"* stage (as of Spring 2023). It includes wrappers for even simpler, single-command plotting and estimation of UD datasets, using `cir` package functions with the defaults already dialed onto the UD context. You can download that package using `remotes::install_github(assaforon/upndown)`.
 
 ## The Study
 
-Benhamou et al. randomized women in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and to test whether there is significant difference in median efficacy. The original study used a "traditional" UD dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$ was not significant. To derive inference about this difference, they apparently used the standard errors of the dose averages in a $t$-test like manner.
+Benhamou et al. (2003) randomized women volunteers in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and to test whether there is significant difference in efficacy by comparing the two estimates. The original study used a "traditional" UD dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$s was not significant. To derive inference about this difference, they apparently used the standard errors of dose averages in a $t$-test like manner.
 
-Pace and Stylianou re-analyzed the data using isotonic regression (IR) and 83% bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis with $\alpha = 0.05.$ ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger and statistically significant difference between the two ED$_{50}$‘s. Per their estimates, levobupivacaine was 37% more potent.
+Pace and Stylianou (2007) re-analyzed the data using isotonic regression (IR) and $83\%$ bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis with $\alpha = 0.05.$ ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger difference: levobupivacaine was 37% more potent according to the IR estimates. Furthermore, they diffrence was deemed statistically significant because the $83\%$ did not overlap.
 
-Here we revisit this experiment yet again. To reduce some confusion, we drop the percent sign from description of the doses used (they are given as concentrations in percent in the original).
+Here we revisit this experiment yet again. To reduce some confusion, we drop the percent sign from description of doses used *(they were given as concentrations in percent in the original)*.
 
 ## Experimental Trajectories
 
-Since UD datasets are rather compact, adding the data takes no more than 2-3 lines of code. But you can also use `.csv` file input if preferred, with two columns headed “x” and “y”. We do not have the original data table, nor do the original authors have access to it anymore; but we can read the sequence of administered doses off of Benhamou et al.’s Figure 1. 
+We do not have the original data table, nor do the original authors have access to it anymore; but we can read the sequence of administered doses off of Benhamou et al.’s Figure 1. 
 
 
 ```{r data}
@@ -60,7 +60,7 @@ bhamou03ropi = DRtrace(x=xropi[-40]/100, y=(1-diff(xropi))/2)
 bhamou03levo = DRtrace(x=xlevo[-40]/100, y=(1-diff(xlevo))/2)
 ```
 
-In the construction above, we gave up the 40th and last observation in each arm, because we only know its dose but not the response. 
+In the construction above, we gave up the 40th and last observation in each arm, because we only know its dose but not the response. Since UD datasets (and more generally, small-sample dose-response datasets) are rather compact, as shown above adding the data takes no more than 2-3 lines of code. But you can also use `.csv` file input if preferred, with two columns headed `x` and `y`. 
 
 `DRtrace` objects have a native plotting method:
 
@@ -75,7 +75,7 @@ plot(bhamou03levo, ylim=doserange, ylab="Concentration (%)", main='Levobupivacai
 
 The "traditional" estimates in the original articles, just used some type of average of the doses administered. This is based on the premise that over time, up-and-down designs concentrate these doses roughly symmetrically around the target percentile.
 
-However, generally the "traditional" estimates are rather outdated and lack robustness. CIR is recommended as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
+However, generally the "traditional" estimates are rather outdated and lack robustness. We recommend CIR as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
 
 ## Dose-Response Plain and ED$_{50}$ Estimates
 
@@ -88,10 +88,9 @@ knitr::kable(bhamou03ropiRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 knitr::kable(bhamou03levoRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 ```
 
-Let us visualize the response frequencies on **the dose-response plane, which is "where CIR estimation action happens."**
-*(and likewise for any regression-based estimation of dose-response data)* 
+Let us visualize the response frequencies on **the dose-response plane, which is "where CIR estimation action happens."** *(and likewise for any regression-based estimation of dose-response data)* 
 
-Just like the plots above, the plots below are "native" CIR methods for `doseResponse` objects.
+In a similar manner to the plots above, the plots below are native `cir` methods for `doseResponse` objects. Symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
 
 
 ```{r drfig0,fig.width=10,fig.height=5,out.height=400,out.width=800}
@@ -106,8 +105,6 @@ ylab="Proportion Effective", main='Levobupivacaine Arm', ylim=0:1)
 
 abline( h=0.5, col='purple', lty=2)
 ```
-
-NOTE: symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
 
 Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response region, so the target seems to lie between concentrations $0.09$ and $0.10$. We cannot be very confident of that, given the limited sample of binary observations - but at least there's a clear candidate. 
 
