--- a/vignettes/BenHamou03.rmd
+++ b/vignettes/BenHamou03.rmd
@@ -145,11 +145,11 @@ levo83 = quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, conf=0
 levo83
 ```
 
-Paradoxically, despite using a point-estimation method very close to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap, in fact they fully overlap - suggesting no evidence for a difference in potency** at the $\alpha=0.05$ level. 
+Paradoxically, despite using a point-estimation method very close to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap, suggesting no evidence for a difference in potency** at the $\alpha=0.05$ level. 
 
 Interestingly, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  **Where we part ways with Pace and Stylianou - dramatically - is indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work with intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
 
-Looking in more detail at the two confidence limits with the biggest difference between our method and the boostrap: their $83\%$ LCL for Ropivacaine is $0.087$ - only 0.6 of a dose interval below their point estimate  - whereas ours is $0.079$, nearly 1.5 intervals below our point estimate. Even more dramatic is the difference between Levobupivacaine's $83\%$ UCLs: $0.081$ (1.3 intervals above point-estimate) vs. $0.109$ (a full 4 intervals above that estimate).  
+Looking in more detail at the two confidence limits with the biggest difference between our method and the boostrap: their $83\%$ LCL for Ropivacaine is $0.087$ - only 0.6 of a dose interval below their point estimate  - whereas ours is `r round(ropi83$lower83conf, 3)`, nearly 1.5 intervals below our point estimate. Their Levobupivacaine $83\%$ UCL is $0.081$ (1.3 intervals above point-estimate) vs. `r round(levo83$upper83conf, 3)` (more than 2 intervals above that estimate).  
 
 Conceptually, the bootstrap CIs appear unrealistically narrow given the amount of information available - only 39 binary observations spread over several doses. By the way, we can use the same `quickInverse()` function to reproduce the Pace-Stylianou *point* estimates (but not the CIs, since `cir` does not implement the bootstrap approach):
 
